Add Configuration Class, store config in new class

--- a/ConsoleApplication6/ConsoleApplication6/ConsoleApplication6.csproj
+++ b/ConsoleApplication6/ConsoleApplication6/ConsoleApplication6.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Answer.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="ConfigurationForm.cs">
       <SubType>Form</SubType>
     </Compile>
