--- a/ConsoleApplication6/ConsoleApplication6/ConsoleApplication6.csproj
+++ b/ConsoleApplication6/ConsoleApplication6/ConsoleApplication6.csproj
@@ -79,6 +79,11 @@
     <Compile Include="EvaluationForm.Designer.cs">
       <DependentUpon>EvaluationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,12 +123,80 @@
     <EmbeddedResource Include="EvaluationForm.resx">
       <DependentUpon>EvaluationForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="StartForm.resx">
       <DependentUpon>StartForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="QuestionForm.resx">
       <DependentUpon>QuestionForm.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Binnen\107.gif" />
+    <Content Include="Binnen\108.gif" />
+    <Content Include="Binnen\110.gif" />
+    <Content Include="Binnen\111.gif" />
+    <Content Include="Binnen\112.gif" />
+    <Content Include="Binnen\113.gif" />
+    <Content Include="Binnen\114.gif" />
+    <Content Include="Binnen\115.gif" />
+    <Content Include="Binnen\116.gif" />
+    <Content Include="Binnen\120.gif" />
+    <Content Include="Binnen\121.gif" />
+    <Content Include="Binnen\122.gif" />
+    <Content Include="Binnen\123.gif" />
+    <Content Include="Binnen\124.gif" />
+    <Content Include="Binnen\125.gif" />
+    <Content Include="Binnen\127.gif" />
+    <Content Include="Binnen\129.gif" />
+    <Content Include="Binnen\131.gif" />
+    <Content Include="Binnen\132.gif" />
+    <Content Include="Binnen\145.gif" />
+    <Content Include="Binnen\146.gif" />
+    <Content Include="Binnen\147.gif" />
+    <Content Include="Binnen\148.gif" />
+    <Content Include="Binnen\149.gif" />
+    <Content Include="Binnen\150.gif" />
+    <Content Include="Binnen\151.gif" />
+    <Content Include="Binnen\152.gif" />
+    <Content Include="Binnen\153.gif" />
+    <Content Include="Binnen\154.gif" />
+    <Content Include="Binnen\155.gif" />
+    <Content Include="Binnen\157.gif" />
+    <Content Include="Binnen\17.gif" />
+    <Content Include="Binnen\18.gif" />
+    <Content Include="Binnen\180.gif" />
+    <Content Include="Binnen\183.gif" />
+    <Content Include="Binnen\185.gif" />
+    <Content Include="Binnen\186.gif" />
+    <Content Include="Binnen\188.gif" />
+    <Content Include="Binnen\189.gif" />
+    <Content Include="Binnen\19.gif" />
+    <Content Include="Binnen\192.gif" />
+    <Content Include="Binnen\193.gif" />
+    <Content Include="Binnen\196.gif" />
+    <Content Include="Binnen\198.gif" />
+    <Content Include="Binnen\199.gif" />
+    <Content Include="Binnen\20.gif" />
+    <Content Include="Binnen\201.gif" />
+    <Content Include="Binnen\202.gif" />
+    <Content Include="Binnen\204.gif" />
+    <Content Include="Binnen\21.gif" />
+    <Content Include="Binnen\22.gif" />
+    <Content Include="Binnen\23.gif" />
+    <Content Include="Binnen\24.gif" />
+    <Content Include="Binnen\243.gif" />
+    <Content Include="Binnen\244.gif" />
+    <Content Include="Binnen\25.gif" />
+    <Content Include="Binnen\26.gif" />
+    <Content Include="Binnen\27.gif" />
+    <Content Include="Binnen\28.gif" />
+    <Content Include="Binnen\29.gif" />
+    <Content Include="Binnen\30.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
