--- a/ConsoleApplication6/ConsoleApplication6/FrageBogenSchifffahrt.csproj
+++ b/ConsoleApplication6/ConsoleApplication6/FrageBogenSchifffahrt.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
-    <Compile Include="Questionaire.cs" />
+    <Compile Include="Questionnaire.cs" />
     <Compile Include="QuestionForm.cs">
       <SubType>Form</SubType>
     </Compile>
