add answer test

--- a/ConsoleApplication6/ConsoleApplication6/FrageBogenSchifffahrt.csproj
+++ b/ConsoleApplication6/ConsoleApplication6/FrageBogenSchifffahrt.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Answer.cs" />
+    <Compile Include="AnswerTest.cs" />
     <Compile Include="QuestionTest.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="ConfigurationForm.cs">
