Deleted useless stuff

--- a/ConsoleApplication6/ConsoleApplication6/FrageBogenSchifffahrt.csproj
+++ b/ConsoleApplication6/ConsoleApplication6/FrageBogenSchifffahrt.csproj
@@ -107,6 +107,9 @@
     <Compile Include="QuestionForm.Designer.cs">
       <DependentUpon>QuestionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Viewer.xaml.cs">
+      <DependentUpon>Viewer.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -207,6 +210,12 @@
     <Content Include="Binnen\28.gif" />
     <Content Include="Binnen\29.gif" />
     <Content Include="Binnen\30.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Viewer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
